# rc-legacy

./: AUTHORS  BUILDING.txt  CHANGES  CHANGES.txt  COPYING  ChangeLog  Changelog  Config  INSTALL  LICENCE  LICENSE  Makefile  Makefile.32  Makefile.64  Makefile.aix  Makefile.am  Makefile.in  NEWS  NOTES  NOTES.pgssapi  README  README.cvs  README.md  README.txt  Specfile  TESTING  TODO  Troubleshooting  Troubleshooting.in  authtest.h  authtest.pp  autogen.sh  base64.c  bool.h  bootstrap.sh  build.bat  build.local  build.sh  cmd.c  colours.c  (+124 more)
heimdal/: CHANGES.Quest  LICENCE.Quest  Makefile.am  Makefile.in  README.Quest  TODO-1.0  acinclude.m4  aclocal.m4  bootstrap.sh  configure  configure.in
heimdal/admin/: Makefile.am  Makefile.in  add.c  change.c  copy.c  get.c  ktutil-commands.in  ktutil.8  ktutil.c  ktutil_locl.h  list.c  purge.c  remove.c  rename.c
heimdal/appl/: Makefile.am  Makefile.in
heimdal/appl/afsutil/: Makefile.am  Makefile.in  afslog.c  pagsh.1  pagsh.c
heimdal/appl/dceutils/: Makefile.in
heimdal/appl/ftp/: Makefile.in
heimdal/appl/kf/: Makefile.in  kfd.c
heimdal/appl/kx/: Makefile.am  Makefile.in  krb4.c  krb5.c  kx.c  kxd.c  rxtelnet.1  rxtelnet.in
heimdal/appl/login/: Makefile.am  Makefile.in  limits_conf.c  login.1  login.c  login_locl.h  login_protos.h
heimdal/appl/otp/: Makefile.am  Makefile.in  otp.c  otpprint.c
heimdal/appl/popper/: Makefile.am  Makefile.in  auth_gssapi.c  auth_krb4.c  pop_auth.c  pop_auth.h  pop_get_command.c  pop_init.c  pop_pass.c  pop_user.c  popper.8  popper.c  popper.h
heimdal/appl/push/: Makefile.am  Makefile.in  push.c
heimdal/appl/rcp/: Makefile.am  Makefile.in  rcp.c  rcp_locl.h  util.c
heimdal/appl/rsh/: Makefile.am  Makefile.in  common.c  list.c  list.h  rsh.1  rsh.c  rsh_locl.h  rshd.8  rshd.c  test-list.c
heimdal/appl/su/: Makefile.am  Makefile.in  su.1  su.c
heimdal/appl/telnet/: Makefile.in
heimdal/appl/test/: Makefile.am  Makefile.in  common.c  gss_common.c  gss_common.h  gssapi_client.c  gssapi_server.c  http_client.c  nt_gss_server.c  test_locl.h  uu_client.c
heimdal/appl/xnlock/: Makefile.am  Makefile.in  xnlock.c
heimdal/cf/: Makefile.am.common  aix.m4  broken-getaddrinfo.m4  broken-glob.m4  broken-realloc.m4  broken2.m4  c-attribute.m4  c-function.m4  check-getpwnam_r-posix.m4  check-man.m4  check-netinet-ip-and-tcp.m4  check-xau.m4  crypto.m4  have-pragma-weak.m4  have-struct-field.m4  have-types.m4  krb-bigendian.m4  krb-ipv6.m4  krb-version.m4  krb5.m4  login.m4  need-proto.m4  osfc2.m4  pam.m4  proto-compat.m4  pthreads.m4  retsigtype.m4  roken.m4  sunos.m4  telnet.m4  test-package.m4  with-all.m4
heimdal/doc/: Makefile.am  Makefile.in  heimdal.info  heimdal.texi  install.texi  programming.texi  setup.texi  whatis.texi
heimdal/doc/standardisation/: draft-ietf-kitten-gssapi-extensions-iana-00.txt
heimdal/include/: Makefile.am  Makefile.in  config.h.in  version.h  version.h.in
heimdal/include/kadm5/: Makefile.in
heimdal/kadmin/: Makefile.am  Makefile.in  ank.c  cpw.c  del.c  del_enctype.c  dump-format.txt  dump.c  ext.c  get.c  init.c  kadm_conn.c  kadmin-commands.in  kadmin.8  kadmin.c  kadmin_locl.h  kadmind.8  kadmind.c  load.c  mod.c  pw_quality.c  rename.c  server.c  stash.c  util.c
heimdal/kcm/: Makefile.am  Makefile.in  acl.c  acquire.c  cache.c  client.c  config.c  connect.c  cursor.c  events.c  glue.c  kcm.8  kcm_locl.h  log.c  main.c  protocol.c  renew.c
heimdal/kdc/: 524.c  Makefile.am  Makefile.in  config.c  connect.c  hprop.8  hprop.c  hprop.h  hpropd.8  hpropd.c  kaserver.c  kdc.8  kdc.cat8  kdc_locl.h  kerberos4.c  kerberos5.c  kstash.8  kstash.c  main.c  misc.c  mit_dump.c  pkinit.c  string2key.c  v4_dump.c
heimdal/kpasswd/: Makefile.am  Makefile.in  kpasswd-generator.c  kpasswd.1  kpasswd.c  kpasswdd.8  kpasswdd.c
heimdal/kuser/: Makefile.am  Makefile.in  copy_cred_cache.1  copy_cred_cache.c  generate-requests.c  kdecode_ticket.c  kdestroy.1  kdestroy.c  kgetcred.1  kgetcred.c  kinit.1  kinit.c  klist.1  klist.c  kverify.c
heimdal/lib/: Makefile.am  Makefile.in
heimdal/lib/45/: Makefile.am  Makefile.in
heimdal/lib/asn1/: Makefile.am  Makefile.in  asn1_print.c  check-der.c  check-gen.c  der_get.c  gen.c  gen_copy.c  gen_decode.c  gen_encode.c  gen_length.c  k5.asn1  lex.l  main.c  setchgpw2.asn1
heimdal/lib/auth/: Makefile.in
heimdal/lib/com_err/: Makefile.am  Makefile.in  com_err.h  compile_et.c  compile_et.h  parse.y  roken_rename.h
heimdal/lib/des/: Makefile.am  Makefile.in  des.c  destest.c  md4.c  md5.c  rc2.c  rc2test.c  rctest.c
heimdal/lib/editline/: Makefile.am  Makefile.in  complete.c  editline.c  roken_rename.h
heimdal/lib/gssapi/: 8003.c  Makefile.am  Makefile.in  accept_sec_context.c  acquire_cred.c  add_cred.c  arcfour.c  arcfour.h  ccache_name.c  copy_ccache.c  decapsulate.c  delete_sec_context.c  export_sec_context.c  gss_acquire_cred.3  gssapi.3  gssapi.h  gssapi_locl.h  import_sec_context.c  indicate_mechs.c  init_sec_context.c  inquire_context.c  inquire_cred_by_mech.c  release_cred.c  spkm.asn1  test_acquire_cred.c  test_cred.c  test_sequence.c  ticket_flags.c  wrap.c
heimdal/lib/hdb/: Makefile.am  Makefile.in  common.c  convert_db.c  db.c  db3.c  hdb-ldap.c  hdb.h  keytab.c  mkey.c  ndbm.c
heimdal/lib/kadm5/: Makefile.am  Makefile.in  acl.c  ad.c  admin.h  check-cracklib.pl  chpass_s.c  create_s.c  default_keys.c  delete_s.c  destroy_c.c  destroy_s.c  dump_log.c  ent_setup.c  get_princs_s.c  get_s.c  init_c.c  iprop.8  iprop.h  ipropd_master.c  ipropd_slave.c  kadm5-pwcheck.h  kadm5_err.et  kadm5_pwcheck.3  keys.c  log.c  modify_s.c  password_quality.c  private.h  randkey_s.c  rename_s.c  replay_log.c  set_keys.c  test_pw_quality.c  truncate_log.c
heimdal/lib/kafs/: Makefile.am  Makefile.in  afskrb.c  afskrb5.c  afssys.c  afssysdefs.h  common.c  kafs.3  kafs.h  kafs_locl.h  (+1 more)
heimdal/tools/: Makefile.am  Makefile.in  kdc-log-analyze.pl  krb5-config.in
icecream/services/: Makefile.am  getloadavg.c  setenv.h  wait4.h
ktedit/: autogen.sh  cmd.c  configure.ac  ktedit.1  ktedit.pp  main.c  splitline.c
(+994 files in other folders)
