# (c) 2007 Quest Software, Inc. All rights reserved
AC_INIT(sys-auth, [1.0.0.]esyscmd(tr -d '\012' <build-number.txt))
VERSION="1.0.0.`cat ./build-number.txt`"
AC_CONFIG_HEADER(config.h)

dnl Find and test the C compiler
AC_PROG_CC
AC_LANG_C

AC_CHECK_FUNCS(vsyslog snprintf asprintf asnprintf vasprintf vasnprintf vsnprintf)

DO32=''
NO32=#
DO64=''
NO64=#
DOLAM=#
NOLAM=''
DOSUDO=#
NOSUDO=''
CC="gcc"
CC64="gcc -D__64BIT__"
DLFLAG='-ldl'
LDFLAGS='-static-libgcc -shared -Bsymbolic -lc'
CHECKS='check32 check64'

case `uname -a | awk '{print $1}'` in
    Linux)
        OS="LINUX"
        CC="$CC -m32"
        DOSUDO=''
        NOSUDO=#
        case `uname -m` in
            x86_64)
                PLATFORM="LINUX_X86_64"
                CC64="$CC64 -m64"
                CHECKS='check32sudo check64sudo'
                ;;
            i*86)
                PLATFORM="LINUX_X86"
                DO64=#
                NO64=''
                CHECKS='check32sudo'
                ;;
            s390x)
                PLATFORM="LINUX_S390X"
                DO32=#
                NO32=''
                CC="$CC -m31"
                CC64="$CC64 -m64"
                CHECKS='check64sudo'
                ;;
        esac
        ;;
    SunOS)
        OS="SOLARIS"
        PLATFORM="SOLARIS_SPARC"
        CC="$CC -m32"
        CC64="$CC64 -m64"
        ;;
    HP-UX)
        OS=HPUX
        DLFLAG='-ldld'
        if test -f /usr/lib/hpux64/libpam.so ; then
            CC64="$CC64 -mlp64"
        else
            DO64=#
            NO64=''
            CHECKS='check32'
        fi
        case `uname -m` in
            ia64)
                PLATFORM="HPUX_IA64"
                ;;
            *)
                PLATFORM="HPUX_9000"
                ;;
        esac
        ;;
    AIX)
        OS=AIX
        CC64="$CC64 -maix64"
        DOLAM=''
        NOLAM=#
        if test "`uname -r`" -eq "3" ; then
            PLATFORM=AIX_53
        else
            PLATFORM="AIX_51-52"
        fi
        ;;
esac        

CFLAGS="-D${OS} -fpic"

AC_SUBST(OS)
AC_SUBST(PLATFORM)
AC_SUBST(DO32)
AC_SUBST(NO32)
AC_SUBST(DO64)
AC_SUBST(NO64)
AC_SUBST(DOLAM)
AC_SUBST(NOLAM)
AC_SUBST(DOSUDO)
AC_SUBST(NOSUDO)
AC_SUBST(PACKAGE_NAME)
AC_SUBST(CC)
AC_SUBST(CC64)
AC_SUBST(DLFLAG)
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CHECKS)

AC_PROG_MAKE_SET
AC_SUBST(MAKE)

AC_HEADER_STDC
                  
AC_SUBST(VERSION)

dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile Troubleshooting install.sh install_das.sh upgrade.sh make_all.exp)
    chmod +x install.sh
    chmod +x install_das.sh
    chmod +x upgrade.sh
    chmod +x make_all.exp
