# (c) 2007 Quest Software, Inc. All rights reserved
AC_INIT(sys-auth, [2.0.0.]esyscmd(tr -d '\012' <build-number.txt))
VERSION="2.0.0.`cat ./build-number.txt`"
AC_CONFIG_HEADER(config.h)

dnl Find and test the C compiler
AC_PROG_CC
AC_LANG_C

AC_CHECK_FUNCS(vsyslog snprintf asprintf asnprintf vasprintf vasnprintf vsnprintf)

DO32=''
NO32=#
DO64=''
NO64=#
DOLAM=#
NOLAM=''
DOSUDO=#
NOSUDO=''
CC="gcc"
CC64="gcc -D__64BIT__"
DLFLAG='-ldl'
LDFLAGS='-static-libgcc -shared -Bsymbolic -lc'
DOPAM32=''
DOPAM64='#'

case `uname -a | awk '{print $1}'` in
    Linux)
        OS="LINUX"
        CC="$CC -m32"
        DOSUDO=''
        NOSUDO=#
        case `uname -m` in
            x86_64)
                PLATFORM="LINUX_X86_64"
                CC64="$CC64 -m64"
                DOPAM32='#'
                DOPAM64=''
                ;;
            i*86)
                PLATFORM="LINUX_X86"
                DO64=#
                NO64=''
                ;;
            s390x)
                PLATFORM="LINUX_S390X"
                DO32=#
                NO32=''
                CC="$CC -m31"
                CC64="$CC64 -m64"
                DOPAM32='#'
                DOPAM64=''
                ;;
        esac
        ;;
    SunOS)
        OS="SOLARIS"
        PLATFORM="SOLARIS_SPARC"
        CC="$CC -m32"
        AC_DEFINE(_TS_ERRNO,1,Thread_safe_errno_define)
# The -m and elf parts are for the new gcc/ld setup on the 
# VAS Dev build server. The new setup is so it could do 
# Smartcard compiling. 
# Other situations might need to use the other CC64 entry.
#CC64="$CC64 -m64" 
        CC64="$CC64 -m64 -Wl,-m -Wl,elf64_sparc"
        ;;
    HP-UX)
        OS=HPUX
        DLFLAG='-ldld'
        AC_DEFINE(_POSIX_C_SOURCE,199506,Enables_Thread_Safe_errno)
        if test -f "/usr/local/pa20_64/bin/gcc" ; then
#        if test -f /usr/lib/hpux64/libpam.so ; then
            CC64="/usr/local/pa20_64/bin/$CC64"
        else
            DO64=#
            NO64=''
        fi
        case `uname -m` in
            ia64)
                PLATFORM="HPUX_IA64"
                ;;
            *)
                PLATFORM="HPUX_9000"
                ;;
        esac
        ;;
    AIX)
        OS=AIX
        CC64="$CC64 -maix64"
        AC_DEFINE(_THREAD_SAFE_ERRNO,1,Use_the_thread_safe_errno_implementation)
        DOLAM=''
        NOLAM=#
        if test "`uname -r`" -eq "3" ; then
            PLATFORM=AIX_53
        else
            PLATFORM="AIX_51-52"
        fi
        ;;
esac        

CFLAGS="-D${OS} -fpic"

AC_SUBST(OS)
AC_SUBST(PLATFORM)
AC_SUBST(DO32)
AC_SUBST(NO32)
AC_SUBST(DO64)
AC_SUBST(NO64)
AC_SUBST(DOLAM)
AC_SUBST(NOLAM)
AC_SUBST(DOSUDO)
AC_SUBST(NOSUDO)
AC_SUBST(PACKAGE_NAME)
AC_SUBST(CC)
AC_SUBST(CC64)
AC_SUBST(DLFLAG)
AC_SUBST(CFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(CHECKS)
AC_SUBST(DOPAM32)
AC_SUBST(DOPAM64)

AC_PROG_MAKE_SET
AC_SUBST(MAKE)

AC_HEADER_STDC
                  
AC_SUBST(VERSION)

dnl read Makefile.in and write Makefile
AC_OUTPUT(Makefile Troubleshooting install.sh install_das.sh upgrade.sh make_all.exp)
    chmod +x install.sh
    chmod +x install_das.sh
    chmod +x upgrade.sh
    chmod +x make_all.exp
